# obs-source-dock

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in  media-control.cpp  media-control.hpp  media-slider.cpp  media-slider.hpp  qt-display.cpp  slider-absoluteset-style.cpp  slider-absoluteset-style.hpp  source-dock-settings.cpp  source-dock-settings.hpp  source-dock.cpp  source-dock.hpp  volume-meter.cpp  volume-meter.hpp
.github/workflows/: build.yml
CI/macos/: source-dock.pkgproj
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  sk-SK.ini  zh-CN.ini
